--- a/.classpath
+++ b/.classpath
@@ -6,17 +6,17 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/javafx-sdk-21.0.8/lib/javafx.base.jar"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/javafx-sdk-21.0.8/lib/javafx.controls.jar"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/javafx-sdk-21.0.8/lib/javafx.fxml.jar"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/javafx-sdk-21.0.8/lib/javafx.graphics.jar"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/javafx-sdk-21.0.8/lib/javafx.media.jar"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/javafx-sdk-21.0.8/lib/javafx.swing.jar"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/javafx-sdk-21.0.8/lib/javafx.web.jar"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/javafx-sdk-21.0.8/lib/javafx-swt.jar"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/fxgraphics2d-1.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/jfreechart-1.5.6.jar"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/org.jfree.chart.fx-2.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/emanu/Desktop/postgresql-42.7.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Downloads/ProgettoOBJ_15-09 (1)/fxgraphics2d-1.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Downloads/ProgettoOBJ_15-09 (1)/org.jfree.chart.fx-2.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Downloads/ProgettoOBJ_15-09 (1)/jfreechart-1.5.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Downloads/ProgettoOBJ_15-09 (1)/postgresql-42.7.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Desktop/javafx-sdk-21.0.2/lib/javafx.base.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Desktop/javafx-sdk-21.0.2/lib/javafx.controls.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Desktop/javafx-sdk-21.0.2/lib/javafx.fxml.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Desktop/javafx-sdk-21.0.2/lib/javafx.graphics.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Desktop/javafx-sdk-21.0.2/lib/javafx.media.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Desktop/javafx-sdk-21.0.2/lib/javafx.swing.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Desktop/javafx-sdk-21.0.2/lib/javafx.web.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ACER/Desktop/javafx-sdk-21.0.2/lib/javafx-swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
