--- a/src/db.properties
+++ b/src/db.properties
@@ -1,5 +1,5 @@
 url=jdbc:postgresql://localhost:5432/UninaFoodLab
 user=postgres
-password=Emanuele_10
+password=LaTuaNuovaPasswordSicura!
 schema=public
 
